--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@aws-sdk/client-s3": "^3.932.0",
     "@aws-sdk/lib-storage": "^3.932.0",
+    "@aws-sdk/s3-request-presigner": "^3.932.0",
     "@fastify/cors": "^11.1.0",
     "@fastify/multipart": "^9.3.0",
     "dotenv": "^17.2.3",
